// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component app bar indented when drawer is open 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(ForwardRef(AppBar))
    className="MainAppBar-appBar-2 MainAppBar-appBarShift-3"
    position="static"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open navigation menu"
        className="MainAppBar-menuButton-7 MainAppBar-hide-9 tour-nav-menu"
        color="inherit"
        onClick={[Function]}
      >
        <MenuIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Button))
        aria-label="Homepage"
        className="MainAppBar-titleButton-5 tour-title"
        onClick={[Function]}
      >
        <img
          alt="title"
          src="scigateway-white-text-blue-mark-logo.svg"
        />
      </WithStyles(ForwardRef(Button))>
      <WithStyles(ForwardRef(Button))
        aria-label="Contact"
        className="MainAppBar-button-6 tour-contact"
        style={
          Object {
            "paddingTop": 3,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          color="inherit"
          noWrap={true}
          style={
            Object {
              "marginTop": 3,
            }
          }
        >
          contact
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Button))>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(ForwardRef(IconButton))
        aria-label="Help"
        className="MainAppBar-button-6"
        onClick={[Function]}
      >
        <HelpOutlineIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open browser settings"
        className="MainAppBar-button-6 tour-settings"
        onClick={[Function]}
      >
        <SettingsIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Menu))
        anchorEl={null}
        id="settings"
        onClose={[Function]}
        open={false}
      >
        <WithStyles(ForwardRef(MenuItem))
          id="item-manage-cookies"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <TuneIcon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="manage-cookies-button"
          />
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          id="item-dark-mode"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <Brightness4Icon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="toggle-dark-mode"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Menu))>
      <Connect(WithStyles(NotificationBadge)) />
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
</div>
`;

exports[`Main app bar component app bar renders correctly 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(ForwardRef(AppBar))
    className="MainAppBar-appBar-2"
    position="static"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open navigation menu"
        className="MainAppBar-menuButton-7 tour-nav-menu"
        color="inherit"
        onClick={[Function]}
      >
        <MenuIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Button))
        aria-label="Homepage"
        className="MainAppBar-titleButton-5 tour-title"
        onClick={[Function]}
      >
        <img
          alt="title"
          src="scigateway-white-text-blue-mark-logo.svg"
        />
      </WithStyles(ForwardRef(Button))>
      <WithStyles(ForwardRef(Button))
        aria-label="Contact"
        className="MainAppBar-button-6 tour-contact"
        style={
          Object {
            "paddingTop": 3,
          }
        }
      >
        <WithStyles(ForwardRef(Typography))
          color="inherit"
          noWrap={true}
          style={
            Object {
              "marginTop": 3,
            }
          }
        >
          contact
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Button))>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(ForwardRef(IconButton))
        aria-label="Help"
        className="MainAppBar-button-6"
        onClick={[Function]}
      >
        <HelpOutlineIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open browser settings"
        className="MainAppBar-button-6 tour-settings"
        onClick={[Function]}
      >
        <SettingsIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Menu))
        anchorEl={null}
        id="settings"
        onClose={[Function]}
        open={false}
      >
        <WithStyles(ForwardRef(MenuItem))
          id="item-manage-cookies"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <TuneIcon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="manage-cookies-button"
          />
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          id="item-dark-mode"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <Brightness4Icon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="toggle-dark-mode"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Menu))>
      <Connect(WithStyles(NotificationBadge)) />
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
</div>
`;

exports[`Main app bar component does not render contact button when feature is false 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(ForwardRef(AppBar))
    className="MainAppBar-appBar-2"
    position="static"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open navigation menu"
        className="MainAppBar-menuButton-7 tour-nav-menu"
        color="inherit"
        onClick={[Function]}
      >
        <MenuIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Button))
        aria-label="Homepage"
        className="MainAppBar-titleButton-5 tour-title"
        onClick={[Function]}
      >
        <img
          alt="title"
          src="scigateway-white-text-blue-mark-logo.svg"
        />
      </WithStyles(ForwardRef(Button))>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(ForwardRef(IconButton))
        aria-label="Help"
        className="MainAppBar-button-6"
        onClick={[Function]}
      >
        <HelpOutlineIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open browser settings"
        className="MainAppBar-button-6 tour-settings"
        onClick={[Function]}
      >
        <SettingsIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Menu))
        anchorEl={null}
        id="settings"
        onClose={[Function]}
        open={false}
      >
        <WithStyles(ForwardRef(MenuItem))
          id="item-manage-cookies"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <TuneIcon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="manage-cookies-button"
          />
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          id="item-dark-mode"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <Brightness4Icon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="toggle-dark-mode"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Menu))>
      <Connect(WithStyles(NotificationBadge)) />
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
</div>
`;
